src/sass/_upload.scss
.add-recipe-window {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100rem;
  background-color: white;
  border-radius: 9px;

  padding: 5rem 6rem;
  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
  z-index: 1000;
  transition: all 0.5s;

  .btn--close-modal {
    font-family: inherit;
    color: inherit;
    position: absolute;
    top: 0.5rem;
    right: 1.6rem;
    font-size: 3.5rem;
    cursor: pointer;
    border: none;
    background: none;
  }
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(4px);
  z-index: 100;
  transition: all 0.5s;
}

.upload {
  &__input-group {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  &__meta,
  &__ingredients {
    margin-bottom: 3rem;
  }

  &__meta {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem 4rem;
  }

  &__ingredients-row {
    display: grid;
    grid-template-columns: 15% 15% 67%;
    gap: 1.5%;
    margin-bottom: 1rem;
  }

  & label {
    font-size: 1.5rem;
    font-weight: 600;
    color: inherit;
  }

  & input {
    font-size: 1.5rem;
    padding: 0.8rem 1rem;
    border: 1px solid #ddd;
    border-radius: 0.5rem;
    transition: all 0.2s;

    &::placeholder {
      color: $color-grey-light-3;
    }

    &:focus {
      outline: none;
      border: 1px solid $color-primary;
      background-color: $color-grey-light-1;
    }
  }

  &__heading {
    font-size: 2.25rem;
    font-weight: 700;
    text-transform: uppercase;
    margin-bottom: 1rem;
    grid-column: 1 / -1;
  }

  &__btn {
    margin: 0 auto;
    justify-self: center;
  }
}

